Thu Apr 30 15:11:30 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Extended the SYNOPSIS section to give quick overview of the
	routines and their signature.

	Optimized sv_type() to avoid flags checking when not needed, i.e.
	when their type makes it impossible for them to be refs or tied.
	This slightly increases throughput by a few percents when refs
	and tied variables are marginal occurrences in your data.

	Stubs for XS now use OutputStream and InputStream file types to
	make it work when the given file is actually a socket. Perl
	makes a distinction for sockets in its internal I/O structures
	by having both a read and a write structure, whereas plain files
	share the same one.

Tue Jun  3 09:41:33 METDST 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Thanks to a contribution from Benjamin A. Holzman, Storable is now
	able to correctly serialize tied SVs, i.e. tied arrays, hashes
	and scalars.

Thu Apr  9 18:07:51 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	I said SvPOK() had changed to SvPOKp(), but that was a lie...
Wed Apr  8 13:14:29 METDST 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Wrote sizeof(SV *) instead of sizeof(I32) when portable, which
	in effect mangled the object tags and prevented portability
	accross 32/64 bit architectures!

Wed Mar 25 14:57:02 MET 1998   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Added code example for store_fd() and retrieve_fd() in the
	man page, to emphasize that file descriptors must be passed as
	globs, not as plain strings.

	Cannot use SV addresses as tag when using nstore() on LP64. This
	was the cause of problems when creating a storable image on an
	LP64 machine and retrieving it on an ILP32 system, which is
	exactly what nstore() is meant for...

	However, we continue to use SV addresses as tags for plain store(),